# coding-agnet

./: .gitignore  AGENTS.md  README.md  README.zh.md
docs/: development.md  development.zh.md  pending-tools.md  proposal.md  protocol.md  protocol.zh.md
docs/compose/plans/: consolidate-prompts.md
python/: pyproject.toml
python/src/coding_agent/: __init__.py  __main__.py  automation.py  compaction.py  events.py  framework_session.py  loop.py  main.py  mcp.py  session.py  settings.py  skills.py  system_prompt.py  thinking.py  web_server.py  workflow_loop.py
python/src/coding_agent/gateway/: __init__.py  server.py  transport.py  ws_server.py
python/src/coding_agent/tools/: __init__.py  coding_tools.py
python/tests/unit/: test_loop.py  test_mcp.py  test_settings.py  test_skills.py  test_workflow_thinking_attach.py
scripts/: build-package.ps1
tui/: package.json  pnpm-lock.yaml  tsdown.config.ts
tui/src/: app.ts  gatewayClient.ts  gatewayTypes.ts  main.ts
web/: README.md  delete-console.json  delete-test.har  index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
web/demo/: profile.html
web/src/: main.ts  style.css
web/src/components/: ApprovalPanel.vue
web/src/composables/: useGateway.ts
web/src/router/: index.ts
web/src/services/: gateway.ts
web/src/stores/: automation.ts  chat.test.ts  chat.ts  connectors.ts  sessions.ts  settings.ts  skills.ts  workspace.ts
web/src/types/: automation.ts  gateway.ts  session.ts
web/src/utils/: markdown.ts  uid.ts
web/src/views/: ChatSessionView.vue  ChatView.vue  EmptyStateView.vue
(+36 files in other folders)
