[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coding-agent"
version = "0.1.0"
description = "Fine-grained coding agent with custom loop + Vue TUI gateway"
requires-python = ">=3.14"
dependencies = [
    "agent-framework-anthropic>=1.0.0b260618",
    "agent-framework-core>=1.9.0",
    "agent-framework-openai>=1.8.2",
    "websockets>=15.0",
]

[project.scripts]
coding-agent = "coding_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/coding_agent"]

[tool.ruff]
line-length = 120
target-version = "py314"
src = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "SIM105",  # contextlib.suppress — not always clearer
]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
include = ["src"]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "ruff>=0.15.20",
]
